# omegalib-history

./: CMakeLists.txt  MakeRelease.bat.in  README.md
CMakeModules/: FindBulletHelper.cmake  FindOmegalib.cmake  ModuleUtils.cmake
data/: README.md  default.cfg  default_init.py
data/evl/: lyra-xinerama.cfg  minicave.cfg
data/porthole/: index.html
data/rift/: rift.cfg
data/system/: desktop-sound.cfg  desktop.cfg  rift.cfg
docs/: Doxyfile
evl/: lyra-xinerama-demo.cfg  lyra-xinerama-remote.cfg  lyra-xinerama-sage.cfg  omegadesk.cfg
examples/ohello/: ohello.cpp
examples/ohelloWidgets/: ohelloWidgets.cpp
examples/portholeCustomDraw/: portholeCustomDraw.cpp
examples/python/: actor.py  portholeBasic.py  spincube.py
include/: omega.h
include/cyclops/: Entity.h  LineSet.h  Material.h  MaterialParser.h  ModelLoader.h  SceneManager.h  Text3D.h  Uniforms.h
include/omega/: Actor.h  ApplicationBase.h  Camera.h  CameraOutput.h  Console.h  DisplayConfig.h  DisplaySystem.h  DrawContext.h  DrawInterface.h  Engine.h  EqualizerDisplaySystem.h  KeyboardMouseCameraController.h  MissionControl.h  ModuleServices.h  Node.h  PythonInterpreter.h  RenderTarget.h  Renderer.h  SceneNode.h  StatsManager.h  SystemManager.h  Texture.h  osystem.h
include/omegaOsg/: OsgModule.h  OsgRenderPass.h  OsgSceneObject.h  SceneView.h
include/omegaToolkit/ui/: Button.h  Container.h  Image.h  Label.h  Menu.h  MenuManager.h  Widget.h
include/omegaVtk/: VtkRenderPass.h
modules/: CMakeLists.txt  README.md
modules/caveutil/: README.md  caveutil.py
modules/cavevoc/: README.md
modules/flipbookPlayer/: CMakeLists.txt  README.md
modules/mvi/: CMakeLists.txt  WandInputFilter.cpp
modules/native/flipbookPlayer/: CAVE2Player.py  README.md  flipbookPlayer.cpp
modules/native/sage/: SageManager.cpp  SageManager.h
modules/native/templateModule/: CMakeLists.txt  templateModule.cpp
modules/navigator/: README.md
modules/pointCloud/: BinaryPointsLoader.cpp  BinaryPointsLoader.h  README.md  TextPointsLoader.h  pointCloud.cpp
modules/porthole/: CMakeLists.txt  PortholeGUI.cpp  PortholeGUI.h  PortholeService.cpp  PortholeService.h  README.md  porthole.cpp
modules/rift/: CMakeLists.txt  OVRShaders.h  README.md  rift.cpp
modules/sage/: CMakeLists.txt  SageManager.cpp  SageManager.h  sage.cpp
modules/sprite/: demo.py  sprite.py
modules/wandaid/: Doxyfile  README.md  demo.py  wandaid.py
modules/wandaid/resources-wandaid/: bottomdpad.fbx  joystick.fbx  leftbutton.fbx  leftdpad.fbx  rightbutton.fbx  rightdpad.fbx  shoulder.fbx  topdpad.fbx  trigger.fbx  wandaid-orig.fbx  wandaid.fbx  wandanim.fbx  wandlabeled.fbx
src/: CMakeLists.txt
src/apps/olauncher/: olauncher.cpp
src/apps/orun/: CMakeLists.txt  orun.cpp
src/apps/osgbBCC/: CMakeLists.txt  osgbBCC.cpp
src/apps/osgbBasicDemo/: CMakeLists.txt  osgbBasicDemo.cpp
src/apps/osgbCollision/: CMakeLists.txt
src/apps/osgbCollisionWithoutOmega/: CMakeLists.txt  collision.cpp
src/apps/osgbDice/: CMakeLists.txt  osgbDice.cpp
src/apps/osgbSlider/: CMakeLists.txt
src/cyclops/: AnimatedObject.cpp  CMakeLists.txt  Entity.cpp  LineSet.cpp  Material.cpp  MaterialParser.cpp  ModelLoader.cpp  SceneManager.cpp  Text3D.cpp  Uniforms.cpp  cyclopsPythonApi.cpp
src/omega/: CMakeLists.txt  Camera.cpp  CameraOutput.cpp  Console.cpp  CylindricalDisplayConfig.cpp  DisplayConfig.cpp  DrawContext.cpp  DrawInterface.cpp  Engine.cpp  EqualizerDisplaySystem.cpp  GamepadCameraController.cpp  KeyboardMouseCameraController.cpp  MissionControl.cpp  ModuleServices.cpp  Node.cpp  PythonInterpreter.cpp  RenderTarget.cpp  Renderer.cpp  SceneNode.cpp  StatsManager.cpp  SystemManager.cpp  WandCameraController.cpp  omegaConfig.h.in  omegaPythonApi.cpp  osystem.cpp
src/omega/eqinternal/: ChannelImpl.cpp  ChannelStats.cpp  ConfigImpl.cpp  NodeImpl.cpp  WindowImpl.cpp  eqinternal.h
src/omegaOsg/: CMakeLists.txt  OsgModule.cpp  OsgRenderPass.cpp  OsgSceneObject.cpp  ReaderFreeImage.cpp  SceneView.cpp
src/omegaToolkit/: DefaultMouseInteractor.cpp  PortholeGUI.cpp  UiModule.cpp  UiRenderPass.cpp  omegaToolkitPythonApi.cpp
src/omegaToolkit/ui/: Button.cpp  Container.cpp  Image.cpp  Label.cpp  Menu.cpp  MenuManager.cpp  Widget.cpp
src/omegaVtk/: CMakeLists.txt  VtkAttachPoint.cpp  VtkModule.cpp  VtkRenderPass.cpp
src/projects/cs526p1/: CMakeLists.txt  cs526p1.cpp
