###################################################################################################
# CS 526 PROJECT 1
#-------------------------------------------------------------------------------------------------
# Author:										
#  Shi Yin		syin8@uic.edu
###################################################################################################

###################################################################################################

###################################################################################################
# Source files
 set(SRCS
		cs526p1.cpp)
    
###################################################################################################
# Setup compile info
add_executable(cs526p1 ${SRCS})
set_target_properties(cs526p1 PROPERTIES FOLDER Projects)
target_link_libraries(cs526p1
	omega
	omegaToolkit
	omegaOsg
	cyclops)
# Yin